--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,10 @@ img{
 	width:40px;
 	height: 40px;
 	font-size: 25px;
-	background-color: white;
+
 	color: #A9A9A9;
 	text-align: center;
-	border: 1px solid #C0C0C0;
+
 	border-radius: 4px;
 	line-height: 45px;
 	margin: 30px 15px;
@@ -126,7 +126,7 @@ img{
 }
 .info_item{
 	font-size: 25px;
-	color:black;
+	color:#808080;
 	line-height: 50px;
 }
 .info_txt{
@@ -172,7 +172,6 @@ img{
 .lista_vagas{
 	margin: 40px 15px;
 	border-top:1px solid #cdcdcd; 
-	border-bottom:1px solid #cdcdcd; 
 	padding: 30px 0;
 }
 .vagas_sub{
