add media queries and new classes

--- a/css/footer.css
+++ b/css/footer.css
@@ -7,3 +7,10 @@
 	font-size: 14px;
 	color: #847bb9;
 }
+.footer_txt a{
+	margin: 10px;
+	text-decoration: none;
+	text-align: center;
+	font-size: 14px;
+	color: #847bb9;
+}
