--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ img{
 	line-height: 60px;
 	font-size: 50px;
 	margin-bottom: 15px;
+	text-shadow: 2px 2px 1px #fefefe;
 }
 .banner_paragrafo, .icon-angle{
 	text-align: center;
